Attempting to stop the horizontal scrolling

--- a/css/components/viewport.css
+++ b/css/components/viewport.css
@@ -7,6 +7,7 @@
     height: 100vh;
     padding-top: 50px;
     overflow: auto;
+    overflow-y: hidden;
 }
 
 [data-component~="viewport"].tinder-view {
@@ -30,6 +31,7 @@
 [data-component~="viewport"].timeline-view {
     padding-left: 0;
     padding-right: 0;
+    overflow-y: hidden;
 }
 
 [data-component~="viewport"] ul.view-timeline {
